--- a/MyBudgetUI/Pages/ExpenseType.razor
+++ b/MyBudgetUI/Pages/ExpenseType.razor
@@ -1,22 +1,23 @@
 ﻿@page "/expensetype"
 @inherits ExpenseTypeBase
 
-<h3>ExpenseType</h3>
-
 @if (ExpenseTypes == null)
 {
-    <div class ="d-flex justify-content-center">
-        <div class = "spinner-border"></div>
-    </div>
+    <div class = "spinner-border justify-content-center"></div>
 }
 else
 {
     @if (ExpenseTypes.Any())
     {
-        <table class="table table-striped table-bordered my-3">
+        <div class="d-flex flex-row align-items-center">
+            <h3><b>List of the expense types</b></h3>
+            <a href="#" class="btn btn-outline-primary m-4">Add</a>
+        </div>
+
+        <table class="table table-bordered my-3">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th>#</th>
                     <th>Name</th>
                     <th>Comment</th>
                     <th></th>
@@ -26,7 +27,7 @@ else
                 @foreach(var item in ExpenseTypes)
                 {
                     <tr>
-                        <td>@item.Id</td>
+                        <td>@(Counter++)</td>
                         <td>@item.Name</td>
                         <td>@item.Comment</td>
                         <td>
