--- a/MyBudgetUI/Pages/ExpenseTypeEdit.razor
+++ b/MyBudgetUI/Pages/ExpenseTypeEdit.razor
@@ -1,16 +1,34 @@
 ﻿@page "/expensetypeedit/{id}"
 @inherits ExpenseTypeEditBase
 
-<h3>Edit expense type #@ExpenseType.Id</h3>
+@if (ExpenseType == null)
+{
+    <div class="spinner-border justify-content-center"></div>
+}
+else
+{
+    <EditForm Model="@ExpenseType" OnValidSubmit="SaveExpenseType">
+        <DataAnnotationsValidator />
 
-<EditForm class="form-inline" Model="@ExpenseType">
-    <DataAnnotationsValidator />
-    <ValidationSummary />
+        <h3><b>Edit expense type</b></h3>
 
-    <InputText class="form-control mx-2" id="name" @bind-Value="ExpenseType.Name" />
-    <InputText class="form-control mx-2" id="comment" @bind-Value="ExpenseType.Comment" />
-
-    <a href="/expensetype" class = "btn btn-outline-primary m-1">Back</a>
-    <button type="submit" class="btn btn-outline-primary m-1">Save</button>
-    
-</EditForm>
+        <div class="form-group row">
+            <label for="name" class="col-form-label col-sm-1">Name:</label>
+            <div class="col-sm-6">
+                <InputText class="form-control" id="name" @bind-Value="ExpenseType.Name" />
+                <ValidationMessage For="@(() => ExpenseType.Name)" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="comment" class="col-form-label col-sm-1">Comment:</label>
+            <div class="col-sm-6">
+                <InputText class="form-control" id="comment" @bind-Value="ExpenseType.Comment" />
+                <ValidationMessage For="@(() => ExpenseType.Comment)" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <a href="/expensetype" class = "btn btn-outline-primary m-1">Back</a>
+            <button type="submit" class="btn btn-outline-primary m-1">Save</button>
+        </div>
+    </EditForm>
+}
