--- a/MyBudgetUI/Pages/Expense/Expense.razor
+++ b/MyBudgetUI/Pages/Expense/Expense.razor
@@ -1,27 +1,28 @@
 ﻿@page "/expense"
-@inherits ExpenseBase
 
-<h3>Expense</h3>
+@inherits ExpenseBase
 
 @if (Expenses == null)
 {
-    <div class ="d-flex justify-content-center">
-        <div class = "spinner-border"></div>
-    </div>
+    <div class = "spinner-border justify-content-center"></div>
 }
 else
 {
     @if (Expenses.Any())
     {
-        <table class="table table-striped table-bordered my-3">
+        <div class="d-flex flex-row align-items-center">
+            <h3><b>List of the expenses</b></h3>
+            <a href="/expenseedit" class="btn btn-outline-primary mx-4">Create</a>
+        </div>
+
+        <table class="table table-striped table-bordered my-2">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th>#</th>
                     <th>Date</th>
                     <th>Name</th>
                     <th>Sum</th>
                     <th>Comment</th>
-                    <th>ExpenseTypeId</th>
                     <th></th>
                 </tr>
             </thead>
@@ -29,15 +30,16 @@ else
                 @foreach(var item in Expenses)
                 {
                     <tr>
-                        <td>@item.Id</td>
+                        <td>@(Counter++)</td>
                         <td>@item.Date.ToShortDateString()</td>
                         <td>@item.ExpenseType.Name</td>
                         <td>@item.Sum</td>
                         <td>@item.Comment</td>
-                        <td>@item.ExpenseTypeId</td>
                         <td>
-                            <a href = "@($"expenseedit/{item.Id}")" class = "btn btn-outline-primary m-1">Edit</a>
-                            <a href = "#" class = "btn btn-outline-primary m-1">Delete</a>
+                            <a href = "@($"expenseedit/{item.Id}")" class = "btn btn-outline-primary mx-1">Edit</a>
+                            <button type="button" class="btn btn-outline-danger mx-1" value="@item.Id" @onclick="(() => Delete(item.Id))">
+                                Delete
+                            </button>
                         </td>
                     </tr>
                 }
