--- a/MyBudgetUI/Pages/ExpenseType/ExpenseType.razor
+++ b/MyBudgetUI/Pages/ExpenseType/ExpenseType.razor
@@ -1,4 +1,5 @@
 ﻿@page "/expensetype"
+
 @inherits ExpenseTypeBase
 
 @if (ExpenseTypes == null)
@@ -11,10 +12,10 @@ else
     {
         <div class="d-flex flex-row align-items-center">
             <h3><b>List of the expense types</b></h3>
-            <a href="#" class="btn btn-outline-primary m-4">Add</a>
+            <a href="/expensetypeedit" class="btn btn-outline-primary mx-4">Create</a>
         </div>
 
-        <table class="table table-bordered my-3">
+        <table class="table table-striped table-bordered my-3">
             <thead>
                 <tr>
                     <th>#</th>
@@ -31,8 +32,10 @@ else
                         <td>@item.Name</td>
                         <td>@item.Comment</td>
                         <td>
-                            <a href = "@($"expensetypeedit/{item.Id}")" class = "btn btn-outline-primary m-1">Edit</a>
-                            <a href = "#" class = "btn btn-outline-primary m-1">Delete</a>
+                            <a href = "@($"expensetypeedit/{item.Id}")" class = "btn btn-outline-primary mx-1">Edit</a>
+                            <button type="button" class = "btn btn-outline-danger mx-1" value="@item.Id" @onclick="(() => DeleteExpenseType(item.Id))">
+                                Delete
+                            </button>
                         </td>
                     </tr>
                 }
