--- a/MyBudgetUI/Pages/ExpenseType/ExpenseTypeEdit.razor
+++ b/MyBudgetUI/Pages/ExpenseType/ExpenseTypeEdit.razor
@@ -1,4 +1,6 @@
 ﻿@page "/expensetypeedit/{id}"
+@page "/expensetypeedit"
+
 @inherits ExpenseTypeEditBase
 
 @if (ExpenseType == null)
@@ -10,7 +12,7 @@ else
     <EditForm Model="@ExpenseType" OnValidSubmit="SaveExpenseType">
         <DataAnnotationsValidator />
 
-        <h3><b>Edit expense type</b></h3>
+        <h3><b>@PageHeader</b></h3>
 
         <div class="form-group row">
             <label for="name" class="col-form-label col-sm-1">Name:</label>
@@ -29,6 +31,10 @@ else
         <div class="form-group row">
             <a href="/expensetype" class = "btn btn-outline-primary m-1">Back</a>
             <button type="submit" class="btn btn-outline-primary m-1">Save</button>
+            @if (ExpenseType.Id > 0)
+            {
+                <button type="button" class="btn btn-outline-danger m-1" @onclick="DeleteExpenseType">Delete</button>
+            }
         </div>
     </EditForm>
 }
