--- a/MyBudgetUI/Pages/Income/Income.razor
+++ b/MyBudgetUI/Pages/Income/Income.razor
@@ -1,27 +1,29 @@
 ﻿@page "/income"
-@inherits IncomeBase
 
-<h3>Income</h3>
+@inherits IncomeBase
 
 @if (Incomes == null)
 {
-    <div class ="d-flex justify-content-center">
-        <div class = "spinner-border"></div>
-    </div>
+    <div class = "spinner-border justify-content-center"></div>
 }
 else
 {
     @if (Incomes.Any())
     {
+        <div class="d-flex flex-row align-items-center">
+            <h3><b>List of the incomes</b></h3>
+            <a href="/incomeedit" class="btn btn-outline-primary mx-4">Create</a>
+        </div>
+        
+
         <table class="table table-striped table-bordered my-3">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th>#</th>
                     <th>Date</th>
                     <th>Name</th>
                     <th>Sum</th>
                     <th>Comment</th>
-                    <th>IncomeTypeId</th>
                     <th></th>
                 </tr>
             </thead>
@@ -29,15 +31,16 @@ else
                 @foreach(var item in Incomes)
                 {
                     <tr>
-                        <td>@item.Id</td>
+                        <td>@(Counter++)</td>
                         <td>@item.Date.ToShortDateString()</td>
                         <td>@item.IncomeType.Name</td>
                         <td>@item.Sum</td>
                         <td>@item.Comment</td>
-                        <td>@item.IncomeTypeId</td>
                         <td>
-                            <a href = "@($"incomeedit/{item.Id}")" class = "btn btn-outline-primary m-1">Edit</a>
-                            <a href = "#" class = "btn btn-outline-primary m-1">Delete</a>
+                            <a href = "@($"incomeedit/{item.Id}")" class = "btn btn-outline-primary mx-1">Edit</a>
+                            <button type="button" class = "btn btn-outline-danger mx-1" value="@item.Id"@onclick="(() => DeleteIncome(item.Id))">
+                                Delete
+                            </button>
                         </td>
                     </tr>
                 }
