--- a/MyBudgetUI/Pages/IncomeType/IncomeType.razor
+++ b/MyBudgetUI/Pages/IncomeType/IncomeType.razor
@@ -1,27 +1,24 @@
-﻿@using Models;
-@using System.Net.Http;
-@using System.Net.Http.Json;
-@inject HttpClient httpClient;
+﻿@page "/incometype"
 
-@page "/incometype"
 @inherits IncomeTypeBase
-
-<h1>IncomeType</h1>
 
 @if (IncomeTypes == null)
 {
-    <div class ="d-flex justify-content-center">
-        <div class = "spinner-border"></div>
-    </div>
+    <div class = "spinner-border justify-content-center"></div>
 }
 else
 {
     @if (IncomeTypes.Any())
     {
+        <div class="d-flex flex-row align-items-center">
+            <h3><b>List of the income types</b></h3>
+            <a href="/incometypeedit" class="btn btn-outline-primary mx-4">Create</a>
+        </div>
+
         <table class="table table-striped table-bordered my-3">
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th>#</th>
                     <th>Name</th>
                     <th>Comment</th>
                     <th></th>
@@ -31,12 +28,14 @@ else
                 @foreach(var item in IncomeTypes)
                 {
                     <tr>
-                        <td>@item.Id</td>
+                        <td>@(Counter++)</td>
                         <td>@item.Name</td>
                         <td>@item.Comment</td>
                         <td>
                             <a href = "@($"incometypeedit/{item.Id}")" class = "btn btn-outline-primary m-1">Edit</a>
-                            <a href = "#" class = "btn btn-outline-primary m-1">Delete</a>
+                            <button type="button" class="btn btn-outline-danger m-1" value="@item.Id" @onclick="(() => DeleteIncomeType(item.Id))">
+                                Delete
+                            </button>
                         </td>
                     </tr>
                 }
