--- a/MyBudgetUI/Shared/NavMenu.razor
+++ b/MyBudgetUI/Shared/NavMenu.razor
@@ -14,22 +14,22 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="incometype">
-                <span class="oi oi-plus" aria-hidden="true"></span> Income type
+                <span class="oi oi-plus" aria-hidden="true"></span> Income types
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="expensetype">
-                <span class="oi oi-plus" aria-hidden="true"></span> Expense type
+                <span class="oi oi-plus" aria-hidden="true"></span> Expense types
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="income">
-                <span class="oi oi-plus" aria-hidden="true"></span> Income
+                <span class="oi oi-plus" aria-hidden="true"></span> Incomes
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="expense">
-                <span class="oi oi-plus" aria-hidden="true"></span> Expense
+                <span class="oi oi-plus" aria-hidden="true"></span> Expenses
             </NavLink>
         </li>
     </ul>
