--- a/MyBudgetUI/Shared/NavMenu.razor
+++ b/MyBudgetUI/Shared/NavMenu.razor
@@ -8,28 +8,28 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="incometype">
-                <span class="oi oi-plus" aria-hidden="true"></span> Income types
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="expensetype">
-                <span class="oi oi-plus" aria-hidden="true"></span> Expense types
+            <NavLink class="nav-link" href="summary">
+                <span class="oi oi-plus" aria-hidden="true"></span> Отчеты
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="income">
-                <span class="oi oi-plus" aria-hidden="true"></span> Incomes
+                <span class="oi oi-plus" aria-hidden="true"></span> Доходы
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="expense">
-                <span class="oi oi-plus" aria-hidden="true"></span> Expenses
+                <span class="oi oi-plus" aria-hidden="true"></span> Расходы
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="incometype">
+                <span class="oi oi-plus" aria-hidden="true"></span> Типы доходов
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="expensetype">
+                <span class="oi oi-plus" aria-hidden="true"></span> Типы расходов
             </NavLink>
         </li>
     </ul>
