--- a/MyBudgetUI/Pages/Expense/ExpenseEdit.razor
+++ b/MyBudgetUI/Pages/Expense/ExpenseEdit.razor
@@ -5,24 +5,27 @@
 
 @if (Expense == null)
 {
-    <div class="spinner-border justify-content-center"></div>
+    <div class="d-flex align-items-center">
+        <strong>Загрузка...</strong>
+        <div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
+    </div>
 }
 else
 {
     <EditForm Model="@Expense" OnValidSubmit="SaveExpense">
         <DataAnnotationsValidator />
 
-        <h3><b>@PageHeader</b></h3>
+        <h3>@PageHeader</h3>
 
         <div class="form-group row">
-            <label for="date" class="col-form-label col-sm-1">Date:</label>
+            <label for="date" class="col-form-label col-sm-1">Дата</label>
             <div class="col-sm-6">
                 <InputDate class="form-control" id="date" @bind-Value="Expense.Date" />
                 <ValidationMessage For="@(() => Expense.Date)" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="expensetype" class="col-form-label col-sm-1">Expense</label>
+            <label for="expensetype" class="col-form-label col-sm-1">Название</label>
             <div class="col-sm-6">
                 <InputSelect class="form-control " id="expensetype" @bind-Value="Expense.ExpenseTypeId">
                     @foreach (var expenseType in ExpenseTypes)
@@ -34,25 +37,25 @@ else
             </div>
         </div>
         <div class="form-group row">
-            <label for="sum" class="col-form-label col-sm-1">Sum</label>
+            <label for="sum" class="col-form-label col-sm-1">Сумма</label>
             <div class="col-sm-6">
                 <InputNumber class="form-control" id="sum" @bind-Value="Expense.Sum" />
                 <ValidationMessage For="@(() => Expense.Sum)" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="comment" class="col-form-label col-sm-1">Comment</label>
+            <label for="comment" class="col-form-label col-sm-1">Примечание</label>
             <div class="col-sm-6">
                 <InputText class="form-control" id="comment" @bind-Value="Expense.Comment" />
                 <ValidationMessage For="@(() => Expense.Comment)" />
             </div>
         </div>
         <div class="form-group row">
-            <a href="/expense" class = "btn btn-outline-primary m-2">Back</a>
-            <button type="submit" class="btn btn-outline-primary m-2">Save</button>
+            <a href="/expense" class = "btn btn-outline-primary m-2">Назад</a>
+            <button type="submit" class="btn btn-outline-primary m-2">Сохранить</button>
             @if (Expense.Id > 0)
             {
-                <button type="button" class="btn btn-outline-danger m-2" @onclick="DeleteExpense">Delete</button>
+                <button type="button" class="btn btn-outline-danger m-2" @onclick="DeleteExpense">Удалить</button>
             }
         </div>
     </EditForm>
