--- a/MyBudgetUI/Pages/ExpenseType/ExpenseTypeEdit.razor
+++ b/MyBudgetUI/Pages/ExpenseType/ExpenseTypeEdit.razor
@@ -5,35 +5,38 @@
 
 @if (ExpenseType == null)
 {
-    <div class="spinner-border justify-content-center"></div>
+    <div class="d-flex align-items-center">
+        <strong>Загрузка...</strong>
+        <div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
+    </div>
 }
 else
 {
     <EditForm Model="@ExpenseType" OnValidSubmit="SaveExpenseType">
         <DataAnnotationsValidator />
 
-        <h3><b>@PageHeader</b></h3>
+        <h3>@PageHeader</h3>
 
         <div class="form-group row">
-            <label for="name" class="col-form-label col-sm-1">Name:</label>
+            <label for="name" class="col-form-label col-sm-1">Название</label>
             <div class="col-sm-6">
                 <InputText class="form-control" id="name" @bind-Value="ExpenseType.Name" />
                 <ValidationMessage For="@(() => ExpenseType.Name)" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="comment" class="col-form-label col-sm-1">Comment:</label>
+            <label for="comment" class="col-form-label col-sm-1">Примечание</label>
             <div class="col-sm-6">
                 <InputText class="form-control" id="comment" @bind-Value="ExpenseType.Comment" />
                 <ValidationMessage For="@(() => ExpenseType.Comment)" />
             </div>
         </div>
         <div class="form-group row">
-            <a href="/expensetype" class = "btn btn-outline-primary m-1">Back</a>
-            <button type="submit" class="btn btn-outline-primary m-1">Save</button>
+            <a href="/expensetype" class = "btn btn-outline-primary m-1">Назад</a>
+            <button type="submit" class="btn btn-outline-primary m-1">Сохранить</button>
             @if (ExpenseType.Id > 0)
             {
-                <button type="button" class="btn btn-outline-danger m-1" @onclick="DeleteExpenseType">Delete</button>
+                <button type="button" class="btn btn-outline-danger m-1" @onclick="DeleteExpenseType">Удалить</button>
             }
         </div>
     </EditForm>
