--- a/MyBudgetUI/Pages/IncomeType/IncomeType.razor
+++ b/MyBudgetUI/Pages/IncomeType/IncomeType.razor
@@ -4,23 +4,26 @@
 
 @if (IncomeTypes == null)
 {
-    <div class = "spinner-border justify-content-center"></div>
+    <div class="d-flex align-items-center">
+        <strong>Загрузка типов доходов...</strong>
+        <div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
+    </div>
 }
 else
 {
     @if (IncomeTypes.Any())
     {
         <div class="d-flex flex-row align-items-center">
-            <h3><b>List of the income types</b></h3>
-            <a href="/incometypeedit" class="btn btn-outline-primary mx-4">Create</a>
+            <h3>Список типов доходов</h3>
+            <a href="/incometypeedit" class="btn btn-outline-primary mx-4">Создать</a>
         </div>
 
         <table class="table table-striped table-bordered my-3">
             <thead>
                 <tr>
                     <th>#</th>
-                    <th>Name</th>
-                    <th>Comment</th>
+                    <th>Название</th>
+                    <th>Примечание</th>
                     <th></th>
                 </tr>
             </thead>
@@ -32,9 +35,9 @@ else
                         <td>@item.Name</td>
                         <td>@item.Comment</td>
                         <td>
-                            <a href = "@($"incometypeedit/{item.Id}")" class = "btn btn-outline-primary m-1">Edit</a>
+                            <a href = "@($"incometypeedit/{item.Id}")" class = "btn btn-outline-primary m-1">Редактировать</a>
                             <button type="button" class="btn btn-outline-danger m-1" value="@item.Id" @onclick="(() => DeleteIncomeType(item.Id))">
-                                Delete
+                                Удалить
                             </button>
                         </td>
                     </tr>
