--- a/MyBudgetUI/Pages/Income/IncomeTotalOnDateInterval.razor
+++ b/MyBudgetUI/Pages/Income/IncomeTotalOnDateInterval.razor
@@ -33,7 +33,7 @@ else
                 {
                     <tr>
                         <td>@(Counter++)</td>
-                        <td>@item.Date.ToShortDateString()</td>
+                        <td>@item.Date.ToString("dd-MM-yyyy")</td>
                         <td>@item.IncomeType.Name</td>
                         <td>@item.Sum</td>
                         <td>@item.Comment</td>
